# GigaEngine

./: CMakeLists.txt
GLFW/: glfw3.h  glfw3native.h
assets/colladas/: import_test_kek.dae
assets/shaders/default/: fs_shader.sc  vs_shader.sc
gainput/lib/include/gainput/: GainputDebugRenderer.h  GainputInputDeltaState.h  GainputInputDevice.h  GainputInputDeviceBuiltIn.h  GainputInputDeviceKeyboard.h  GainputInputDeviceMouse.h  GainputInputDevicePad.h  GainputInputDeviceTouch.h  GainputInputListener.h  GainputInputManager.h  GainputInputMap.h  GainputInputState.h  GainputIos.h  GainputMapFilters.h  gainput.h
gainput/lib/include/gainput/gestures/: GainputDoubleClickGesture.h  GainputGestures.h  GainputHoldGesture.h  GainputPinchGesture.h  GainputRotateGesture.h  GainputSimultaneouslyDownGesture.h  GainputTapGesture.h
gainput/lib/include/gainput/recorder/: GainputInputPlayer.h  GainputInputRecorder.h  GainputInputRecording.h
gainput/lib/source/gainput/: GainputHelpersEvdev.h  gainput.cpp
gainput/lib/source/gainput/pad/: GainputInputDevicePadLinux.h
gainput/samples/basic/: basicsample_android.cpp  basicsample_win.cpp
gainput/samples/samplefw/: SampleFramework.cpp
src/: fs_shader.sc  main.cpp  vs_shader.sc
src/render/application/: application.cpp  application.h
src/render/common/entry/: entry.cpp  entry.h
src/render/cuban/: cuban.cpp  cuban.h
src/render/test_01_cube/: cube.cpp  cube.h
src/render/window/: window.cpp  window.h
